--- a/accounts/templates/accounts/delete_tickets.html
+++ b/accounts/templates/accounts/delete_tickets.html
@@ -41,21 +41,21 @@
             <!--End Top Bar-->
 
 
-            <div class="container">
-                <div class="row">
-                   <div class="col-lg-3"></div>
-                        <!-- Create Project -->
-                        <div class="col-xl-6 col-lg-10">
-                            <div class="card shadow mb-4">
-                                <form action="" method="POST">
-
-                                    {% csrf_token %}
-                                    {{form}}
-
-                                    <input type="submit" name="Submit">
-                                </form>
-                            </div>
-                        </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card card-body">
+            
+            
+                        <p>Are you sure you want to delete "{{ticket}}"?</p>
+            
+                        <form action="{% url 'delete_tickets' ticket.id  %}" method="POST">
+                            
+                            {% csrf_token %}
+                            <a class="btn btn-warning" href="{% url 'home' %}">Cancel</a>
+            
+                            <input class="btn btn-danger" type="submit" name="Confirm">
+                        </form>
+                    </div>
                 </div>
             </div>
             
