--- a/accounts/templates/accounts/all_tickets.html
+++ b/accounts/templates/accounts/all_tickets.html
@@ -54,6 +54,16 @@
                                             <div class="card card-body">
                                                 <h5>Tickets</h5>
                                             </div>
+                                            <form method="get">
+                                                <div class="input-group">
+            
+                                                    {{myFilter.form}}
+                                                    <button class="btn btn-primary" type="submit">
+                                                        <i class="fas fa-search fa-sm"></i>
+                                                    </button>
+
+                                                </div>
+                                            </form>
                                             <div class="card card-body">
                                                 <table class="table">
                                                     <tr>
