--- a/accounts/templates/accounts/assign_users.html
+++ b/accounts/templates/accounts/assign_users.html
@@ -66,31 +66,26 @@
                                     </div>
                                 </div>
                                 <!-- Card Body -->
-                                <div class="card card-body">
-                                    <table class="table table-sm">
-                                        <tr>
-                                            <form>
-                                                <div class="form-group row">
-                                                <label for="projects_name" class="col-sm-2 col-form-label">Users</label>
-                                                <div class="col-sm-10">
-                                                    <input type="text" class="form-control" id="projects_name" placeholder="">
+                                <div class="container">
+                                    <div class="row">
+                                       <div class="col-lg-3"></div>
+                                            <!-- Create Project -->
+                                            <div class="col-xl-6 col-lg-10">
+                                                <div class="card shadow mb-4">
+                                                    <form action="" method="POST">
+                    
+                                                        {% csrf_token %}
+                                                        {{form}}
+                    
+                                                        <input type="submit" name="Submit">
+                                                    </form>
                                                 </div>
-                                                </div>
-                                                <div class="form-group row">
-                                                    <label for="project_description" class="col-m-3 col-form-label">Projects</label>
-                                                    <div class="col-sm-10">
-                                                        <input type="text" class="form-control" id="project_description" placeholder="">
-                                                    </div>
-                                                </div>
-                                                <fieldset enable>
-                                                    <!--Add form here-->
-                                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                                </fieldset>
-                                            </form>
-                                        </tr>
-                                
-                                    </table>
+                                            </div>
+                                    </div>
                                 </div>
+                                
+                    
+                    
                             </div>
                         </div>
                    <div class="col-lg-3"></div>
