--- a/accounts/templates/accounts/assign_roles.html
+++ b/accounts/templates/accounts/assign_roles.html
@@ -43,57 +43,29 @@
             <div class="container">
                 <div class="row">
                    <div class="col-lg-3"></div>
-                        <!-- Create Tickets -->
-                        <div class="col-xl-6 col-lg-10">
-                            <div class="card shadow mb-4">
-                                <!-- Card Header - Dropdown -->
-                                <div
-                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Assign Roles</h6>
-                                    <div class="dropdown no-arrow">
-                                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                            aria-labelledby="dropdownMenuLink">
-                                            <div class="dropdown-header">Dropdown Header:</div>
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Something else here</a>
+                   <div class="container">
+                    <div class="row">
+                       <div class="col-lg-3"></div>
+                            <!-- Card Body -->
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-3"></div>
+                                        <!-- Create Project -->
+                                        <div class="col-xl-6 col-lg-10">
+                                            <div class="card shadow mb-4">
+                                                <form action="" method="POST">
+                
+                                                    {% csrf_token %}
+                                                    {{form}}
+                
+                                                    <input type="submit" name="Submit">
+                                                </form>
+                                            </div>
                                         </div>
-                                    </div>
-                                </div>
-                                <!-- Card Body -->
-                                <div class="card card-body">
-                                    <table class="table table-sm">
-                                        <tr>
-                                            <form>
-                                                <div class="form-group row">
-                                                <label for="projects_name" class="col-sm-2 col-form-label">Users</label>
-                                                <div class="col-sm-10">
-                                                    <input type="text" class="form-control" id="projects_name" placeholder="">
-                                                </div>
-                                                </div>
-                                                <div class="form-group row">
-                                                    <label for="project_description" class="col-m-3 col-form-label">Roles</label>
-                                                    <div class="col-sm-10">
-                                                        <input type="text" class="form-control" id="project_description" placeholder="">
-                                                    </div>
-                                                </div>
-                                                <fieldset enable>
-                                                    <!--Add form here-->
-                                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                                </fieldset>
-                                            </form>
-                                        </tr>
-                                
-                                    </table>
                                 </div>
                             </div>
-                        </div>
-                   <div class="col-lg-3"></div>
+                    </div>
+                </div>
                 </div>
             </div>
         
