--- a/accounts/templates/accounts/delete_members.html
+++ b/accounts/templates/accounts/delete_members.html
@@ -43,28 +43,32 @@
             <div class="container">
                 <div class="row">
                    <div class="col-lg-3"></div>
-                        <!-- Card Body -->
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-3"></div>
-                                    <!-- Create Project -->
-                                    <div class="col-xl-6 col-lg-10">
-                                        <div class="card shadow mb-4">
-                                            <form action="" method="POST">
-            
+                        <!-- Create Tickets -->
+                        <div class="col-xl-6 col-lg-10">
+                            <div class="card shadow mb-4">
+                                <!-- Card Header - Dropdown -->
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="card card-body">
+                                
+                                
+                                            <p>Are you sure you want to delete "{{member}}"?</p>
+                                
+                                            <form action="{% url 'delete_members' member.id  %}" method="POST">
+                                                
                                                 {% csrf_token %}
-                                                {{form}}
-            
-                                                <input type="submit" name="Submit">
+                                                <a class="btn btn-warning" href="{% url 'home' %}">Cancel</a>
+                                
+                                                <input class="btn btn-danger" type="submit" name="Confirm">
                                             </form>
                                         </div>
                                     </div>
+                                </div>
+                                
                             </div>
                         </div>
                 </div>
             </div>
-            
-
         
         </div>
         <!-- End of Main Content -->
