--- a/accounts/templates/accounts/sidebar.html
+++ b/accounts/templates/accounts/sidebar.html
@@ -87,7 +87,7 @@
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <a class="collapse-item" href="{% url 'assign_roles' %}">Assign Roles</a>
-                <a class="collapse-item" href="{% url 'remove_roles' %}">Remove Roles</a>
+                <a class="collapse-item" href="">Remove Members</a>
             </div>
         </div>
     </li>
